당신의 TPO에 맞춘 간식 제안 빼고 마무리

--- a/index.html
+++ b/index.html
@@ -538,16 +538,16 @@
                 <h3>이 맛, 널담이 처음이야!</h3>
                 <p>신상 맛있게 담아왔어요</p>
                 <div class="container">
-                <div class="left_wrap">
+                <div class="left-wrap">
                     <div class="left_wrap_img">
                         <a href="#">
                             <img src="./images/new_product_001.jpg" alt="널담 뉴트리션 완전영양 라이트번 저당 고단백 모닝 빵 플레인">
                         </a>
                     </div>
                     <div class="left_wrap_info">
-                        <h4><span>New</span>널담 뉴트리션 완전영양 라이트번<br> 저당 고단백 모닝 빵 플레인 60봉 3세트 (총 9봉)</h4>
-                        <p>33종 영양 성분을 빵 하나로 채우자!</p>
-                        <p>우리 몸에 중요한 영양성분 단백질, 널담 라이트번으로 간편하고 맛있게 단백질 8.8g을 채울 수 있습니다.</p>
+                        <h4><span>New</span>널담 뉴트리션 완전영양 라이트번 저당 고단백 모닝 빵 플레인 60봉 3세트 (총 9봉)</h4>
+                        <p class="desc1">33종 영양 성분을 빵 하나로 채우자!</p>
+                        <p class="desc2">우리 몸에 중요한 영양성분 단백질, 널담 라이트번으로 간편하고 맛있게 단백질 8.8g을 채울 수 있습니다.</p>
                     </div>
                     <div class="new_product_more_btn">
                         <a href="#">More</a>
@@ -556,8 +556,8 @@
                 <div class="right_wrap">
                     <div class="right_wrap_info">
                         <h4><span>New</span>널담 고단백 저당 네모 바게트 90g 6봉 5가지 맛(총 12봉)</h4>
-                        <p>고단백 18g, 저당 2.2g! 건강을 생각한 새로운 바게트</p>
-                        <p>바삭한 식감 속에 숨겨진 18g 고단백 빵 한조각으로 오늘의 회복과 포만감을 제공합니다.</p>
+                        <p class="desc1">고단백 18g, 저당 2.2g! 건강을 생각한 새로운 바게트</p>
+                        <p class="desc2">바삭한 식감 속에 숨겨진 18g 고단백 빵 한조각으로 오늘의 회복과 포만감을 제공합니다.</p>
                     </div>
                     <div class="new_product_more_btn">
                         <a href="#">More</a>
@@ -570,10 +570,60 @@
                 </div>
                 </div>
             </div>
+            <div class="more-btn">
+                <a href="#">more</a>
+            </div>
         </section>
         <section class="wide-Banner2">
             <img src="./images/nuldam_banner_002.jpg" alt="배너2">
         </section>
     </main>
+    <footer>
+        <div class="footer_wrap">
+            <div class="footer_logo">
+                <a href="#"><img src="./images/footer_logo.png" alt="푸터로고"></a>
+            </div>
+            <div class="footer-group-wrap">
+            <div class="footer-group">
+                <div class="footer-info-wrap">
+                    <h5 class="footer-info">계좌 정보</h5>
+                    <p class="content">하나은행 345 910023 55405</p>
+                    <p class="content">예금주 : 조인앤조인</p>
+                </div>
+                <div class="footer-info-wrap">
+                    <h5 class="footer-info">계좌 정보</h5>
+                    <p class="content">하나은행 345 910023 55405</p>
+                    <p class="content">예금주 : 조인앤조인</p>
+                </div>
+            </div>
+            <div class="footer-group">
+                <div class="footer-info-wrap">
+                    <h5 class="footer-info">이메일</h5>
+                    <p class="content">joinandjoin2017@gmail.com</p>
+                </div>
+                <div class="footer-info-wrap">
+                    <h5 class="footer-info">전화번호</h5>
+                    <p class="content">1533-7941</p>
+                </div>
+            </div>
+            <div class="footer-group">
+                <div class="footer-info-wrap">
+                    <h5 class="footer-info">주식회사</h5>
+                    <p class="content">조인앤조인</p>
+                </div>
+                <div class="footer-info-wrap">
+                    <h5 class="footer-info">사업자등록번호</h5>
+                    <p class="content">503-87-01038 [사업자 정보확인]</p>
+                </div>
+            </div>
+            <div class="footer-group">
+                <div class="footer-info-wrap">
+                    <h5 class="footer-info">통신판매업신고</h5>
+                    <p class="content">제 2018-경기안산-0150호</p>
+                </div>
+            </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
