--- a/index.html
+++ b/index.html
@@ -574,6 +574,142 @@
                 <a href="#">more</a>
             </div>
         </section>
+        <!-- 6행================================================ TPO-->
+        <section class="TPO_collection">
+            <div class="TPO_title">
+                <h1>“당신의 TPO에 맞춘 간식 제안” </h1>
+                <h3>널담이 제안합니다</h3>
+                <p>지금 당신에게 필요한 간식은? </p>
+            </div>
+            <!-- 왼쪽 책갈피 탭 -->
+            <div class="TPO_collection_container">
+                <div class="tpo_tab">
+                    <button class="tab active" data-target="yellow">
+                        <img src="./images/Tpo_001.png" alt="운동 아이콘 이미지">
+                    </button>
+                    <button class="tab" data-target="blue">
+                        <img src="./images/Tpo_001.png" alt="운동 아이콘 이미지">
+                    </button>
+                    <button class="tab" data-target="red">
+                        <img src="./images/Tpo_001.png" alt="운동 아이콘 이미지">
+                    </button>
+                </div>
+            <!-- 가운데 카드 + 오른쪽 상품리스트 묶음 -->
+            <div class="TPO_collection-content active">
+                <!--노랑색 세트 -->
+                <div class="card-content" id="yellow">
+                    <div class="sticky-note yellow">
+                        <h4>#Recovery Snack</h4>
+                        <p class="subtitle">운동 갔다가 돌아오는 길</p>
+                        <p class="text1">“땀 흘린 당신에게, 근육이 미소 짓는 맛.”</p>
+                        <p class="text2">칼로리는 낮고, 회복은 빠르게</p>
+                    </div>
+                </div>
+                <ul class="product-list">
+                    <li>
+                        <div class="product-card">
+                            <img src="./images/tpo_collection/yellow_001.jpg" alt="제품1">
+                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product-card">
+                            <img src="./images/tpo_collection/yellow_001.jpg" alt="제품1">
+                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product-card">
+                            <img src="./images/tpo_collection/yellow_001.jpg" alt="제품1">
+                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <!-- 파랑색============== -->
+            <div class="TPO_collection-content">
+                <!--파랑색 세트 -->
+                <div class="card-content" id="blue">
+                    <div class="sticky-note blue">
+                        <h4>#Recovery Snack</h4>
+                        <p class="subtitle">운동 갔다가 돌아오는 길</p>
+                        <p class="text1">“땀 흘린 당신에게, 근육이 미소 짓는 맛.”</p>
+                        <p class="text2">칼로리는 낮고, 회복은 빠르게</p>
+                    </div>
+                </div>
+                <ul class="product-list">
+                    <li>
+                        <div class="product-card">
+                            <img src="./images/tpo_collection/yellow_002.jpg" alt="제품1">
+                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product-card">
+                            <img src="./images/tpo_collection/yellow_002.jpg" alt="제품1">
+                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product-card">
+                            <img src="./images/tpo_collection/yellow_002.jpg" alt="제품1">
+                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <!-- 빨강색============== -->
+            <div class="TPO_collection-content">
+                <!--빨강색 세트 -->
+                <div class="card-content" id="red">
+                    <div class="sticky-note red">
+                        <h4>#Recovery Snack</h4>
+                        <p class="subtitle">운동 갔다가 돌아오는 길</p>
+                        <p class="text1">“땀 흘린 당신에게, 근육이 미소 짓는 맛.”</p>
+                        <p class="text2">칼로리는 낮고, 회복은 빠르게</p>
+                    </div>
+                </div>
+                <ul class="product-list">
+                    <li>
+                        <div class="product-card">
+                            <img src="./images/tpo_collection/yellow_003.jpg" alt="제품1">
+                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product-card">
+                            <img src="./images/tpo_collection/yellow_003.jpg" alt="제품1">
+                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product-card">
+                            <img src="./images/tpo_collection/yellow_003.jpg" alt="제품1">
+                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            </div>
+        </section>
         <section class="wide-Banner2">
             <img src="./images/nuldam_banner_002.jpg" alt="배너2">
         </section>
