--- a/index.html
+++ b/index.html
@@ -583,21 +583,26 @@
             </div>
             <!-- 왼쪽 책갈피 탭 -->
             <div class="TPO_collection_container">
-                <div class="tpo_tab">
-                    <button class="tab active" data-target="yellow">
-                        <img src="./images/Tpo_001.png" alt="운동 아이콘 이미지">
-                    </button>
-                    <button class="tab" data-target="blue">
-                        <img src="./images/Tpo_001.png" alt="운동 아이콘 이미지">
-                    </button>
-                    <button class="tab" data-target="red">
-                        <img src="./images/Tpo_001.png" alt="운동 아이콘 이미지">
-                    </button>
-                </div>
+                <div class="icon-with-tabs">
+                    <div class="tpo_tab">
+                        <button class="tab yellow active" data-target="yellow">
+                        </button>
+                        <button class="tab blue" data-target="blue">
+                        </button>
+                        <button class="tab red" data-target="red">
+                        </button>
+                    </div>
+                    <div class="images-box">
+                        <img  class="icon-images yellow" src="./images/yellow.png" alt="운동 아이콘 이미지">
+                        <!-- <img  class="icon-images blue" src="./images/Tpo_001.png" alt="운동 아이콘 이미지">
+                        <img  class="icon-images red" src="./images/Tpo_001.png" alt="운동 아이콘 이미지"> -->
+                    </div>
+            </div>
             <!-- 가운데 카드 + 오른쪽 상품리스트 묶음 -->
-            <div class="TPO_collection-content active">
+            <div class="TPO_collection-content active"  id="yellow">
                 <!--노랑색 세트 -->
-                <div class="card-content" id="yellow">
+                <div class="content-product-wrap">
+                <div class="card-content">
                     <div class="sticky-note yellow">
                         <h4>#Recovery Snack</h4>
                         <p class="subtitle">운동 갔다가 돌아오는 길</p>
@@ -609,33 +614,41 @@
                     <li>
                         <div class="product-card">
                             <img src="./images/tpo_collection/yellow_001.jpg" alt="제품1">
-                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
-                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
-                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            <div class="product-card-info">
+                                <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                                <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                                <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            </div>
                         </div>
                     </li>
                     <li>
                         <div class="product-card">
                             <img src="./images/tpo_collection/yellow_001.jpg" alt="제품1">
-                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
-                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
-                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            <div class="product-card-info">
+                                <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                                <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                                <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            </div>
                         </div>
                     </li>
                     <li>
                         <div class="product-card">
                             <img src="./images/tpo_collection/yellow_001.jpg" alt="제품1">
-                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
-                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
-                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            <div class="product-card-info">
+                                <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                                <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                                <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            </div>
                         </div>
                     </li>
                 </ul>
+                </div>
             </div>
             <!-- 파랑색============== -->
-            <div class="TPO_collection-content">
+            <div class="TPO_collection-content" id="blue">
                 <!--파랑색 세트 -->
-                <div class="card-content" id="blue">
+                <div class="content-product-wrap">
+                <div class="card-content">
                     <div class="sticky-note blue">
                         <h4>#Recovery Snack</h4>
                         <p class="subtitle">운동 갔다가 돌아오는 길</p>
@@ -647,33 +660,41 @@
                     <li>
                         <div class="product-card">
                             <img src="./images/tpo_collection/yellow_002.jpg" alt="제품1">
-                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
-                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
-                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            <div class="product-card-info">
+                                <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                                <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                                <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            </div>
                         </div>
                     </li>
                     <li>
                         <div class="product-card">
                             <img src="./images/tpo_collection/yellow_002.jpg" alt="제품1">
-                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
-                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
-                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            <div class="product-card-info">
+                                <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                                <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                                <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            </div>
                         </div>
                     </li>
                     <li>
                         <div class="product-card">
                             <img src="./images/tpo_collection/yellow_002.jpg" alt="제품1">
-                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
-                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
-                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            <div class="product-card-info">
+                                <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                                <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                                <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            </div>
                         </div>
                     </li>
                 </ul>
             </div>
+            </div>
             <!-- 빨강색============== -->
-            <div class="TPO_collection-content">
+            <div class="TPO_collection-content" id="red">
                 <!--빨강색 세트 -->
-                <div class="card-content" id="red">
+                <div class="content-product-wrap">
+                <div class="card-content" >
                     <div class="sticky-note red">
                         <h4>#Recovery Snack</h4>
                         <p class="subtitle">운동 갔다가 돌아오는 길</p>
@@ -685,28 +706,35 @@
                     <li>
                         <div class="product-card">
                             <img src="./images/tpo_collection/yellow_003.jpg" alt="제품1">
-                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
-                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
-                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            <div class="product-card-info">
+                                <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                                <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                                <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            </div>  
                         </div>
                     </li>
                     <li>
                         <div class="product-card">
                             <img src="./images/tpo_collection/yellow_003.jpg" alt="제품1">
-                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
-                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
-                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            <div class="product-card-info">
+                                <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                                <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                                <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            </div>
                         </div>
                     </li>
                     <li>
                         <div class="product-card">
-                            <img src="./images/tpo_collection/yellow_003.jpg" alt="제품1">
-                            <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
-                            <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
-                            <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            <img src="./images/tpo_collection/yellow_003.jpg" alt="제품1">\
+                            <div class="product-card-info">
+                                <h4>널담 고단백 저당 배꼽 베이글 7종 8개입</h4>
+                                <p>식단, 운동, 건강에 빠질 수 없는 영양성분 단백질!<br>널담 베이글은 단백질 하루 섭취 권장량의 무려 42%에 달해요</p>
+                                <p class="product-card-tag"># 플레인, 크랜베리&호두, 흑임자, 바질, 에브리띵,올리브, 야채</p>
+                            </div>
                         </div>
                     </li>
                 </ul>
+            </div>
             </div>
             </div>
         </section>
