--- a/index.html
+++ b/index.html
@@ -39,6 +39,37 @@
                 <li><a href="#">널담의 약속</a></li>
             </ul>
         </nav>
+        <div class="lnb_wrap">
+            <div class="lnb_bg">
+                <div class="lnb-container">
+                    <ul class="lnb-group">
+                        <li><a href="#">조구만 X 널담</a></li>
+                        <li><a href="#">베스트메뉴</a></li>
+                        <li><a href="#">쇼킹딜</a></li>
+                        <li><a href="#">고단백 · 저당</a></li>
+                        <li><a href="#">비건 / 토오보</a></li>
+                        <li><a href="#">음료</a></li>
+                        <li><a href="#">낱개 구입</a></li>
+                        <li><a href="#">신규가입혜택</a></li>
+                        <li><a href="#">적립금</a></li>
+                        <li><a href="#">선물하기</a></li>
+                    </ul>
+                    <ul class="lnb-group">
+                        <li><a href="#">널담 스토리</a></li>
+                        <li><a href="#">널담 레터</a></li>
+                        <li><a href="#">널 담은 공간</a></li>
+                    </ul> 
+                    <ul class="lnb-group">
+                    </ul> 
+                    <ul class="lnb-group">
+                        <li><a href="#">탄소 중립 실천</a></li>
+                        <li><a href="#">환경을 위한 포장재</a></li>
+                        <li><a href="#">푸드 업사이클링</a></li>
+                        <li><a href="#">기부 활동</a></li>
+                    </ul> 
+                </div>
+            </div>
+        </div>
         <ul class="right_menu">
             <a href="#"><span>마이페이지</span></a>
             <a href="#"><span>로그인</span></a>
