--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <div class="lnb_wrap">
             <div class="lnb_bg">
                 <div class="lnb-container">
-                    <ul class="lnb-group">
+                    <div class="lnb-col">
+                        <h4>널담 메뉴 전체보기</h4>
+                        <ul class="lnb-group">
                         <li><a href="#">조구만 X 널담</a></li>
                         <li><a href="#">베스트메뉴</a></li>
                         <li><a href="#">쇼킹딜</a></li>
@@ -54,19 +56,29 @@
                         <li><a href="#">적립금</a></li>
                         <li><a href="#">선물하기</a></li>
                     </ul>
-                    <ul class="lnb-group">
-                        <li><a href="#">널담 스토리</a></li>
-                        <li><a href="#">널담 레터</a></li>
-                        <li><a href="#">널 담은 공간</a></li>
-                    </ul> 
-                    <ul class="lnb-group">
-                    </ul> 
-                    <ul class="lnb-group">
-                        <li><a href="#">탄소 중립 실천</a></li>
-                        <li><a href="#">환경을 위한 포장재</a></li>
-                        <li><a href="#">푸드 업사이클링</a></li>
-                        <li><a href="#">기부 활동</a></li>
-                    </ul> 
+                    </div>
+                    <div class="lnb-col">
+                        <h4>널담's story</h4>
+                        <ul class="lnb-group">
+                            <li><a href="#">널담 스토리</a></li>
+                            <li><a href="#">널담 레터</a></li>
+                            <li><a href="#">널 담은 공간</a></li>
+                        </ul>
+                    </div>
+                    <div class="lnb-col">
+                        <h4>콘텐츠</h4>
+                        <ul class="lnb-group">
+                        </ul>
+                    </div>
+                    <div class="lnb-col">
+                        <h4>널담의 약속</h4>
+                        <ul class="lnb-group">
+                            <li><a href="#">탄소 중립 실천</a></li>
+                            <li><a href="#">환경을 위한 포장재</a></li>
+                            <li><a href="#">푸드 업사이클링</a></li>
+                            <li><a href="#">기부 활동</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
