--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                             <h3>Treats & Slip</h3>
                             <p>“작은 휴식이 필요한 순간.”</p>
                         </div>
+                        <div class="hover-text">
+                            <h3>자세히 보기</h3>
+                            <p>더 많은 정보를 확인하세요</p>
+                        </div>
                     </a>
                     </div>
                     <div class="menu-card card2">
@@ -139,6 +143,10 @@
                             <h3>Meal Types</h3>
                             <p>“당신의 식단 방식은?”</p>
                         </div>
+                        <div class="hover-text">
+                            <h3>자세히 보기</h3>
+                            <p>더 많은 정보를 확인하세요</p>
+                        </div>
                     </div>
                     <div class="menu-card card3">
                         <div class="menu_img">
@@ -148,6 +156,10 @@
                             <h3>Balanced Meals</h3>
                             <p>“가볍게, 든든하게.”</p>
                         </div>
+                        <div class="hover-text">
+                            <h3>자세히 보기</h3>
+                            <p>더 많은 정보를 확인하세요</p>
+                        </div>
                     </div>
                     <div class="menu-card card4">
                         <div class="menu_img">
@@ -156,6 +168,10 @@
                         <div class="menu-text">
                             <h3>Special Now</h3>
                             <p>“당신을 위한 특별한 헤택”</p>
+                        </div>
+                        <div class="hover-text">
+                            <h3>자세히 보기</h3>
+                            <p>더 많은 정보를 확인하세요</p>
                         </div>
                     </div>
                 </div>
