--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                             <p>“작은 휴식이 필요한 순간.”</p>
                         </div>
                         <div class="hover-text">
-                            <h3>자세히 보기</h3>
-                            <p>더 많은 정보를 확인하세요</p>
+                            <h3>Treats & Slip</h3>
+                            <p>디저트, 스낵, 음료</p>
                         </div>
                     </a>
                     </div>
@@ -144,34 +144,34 @@
                             <p>“당신의 식단 방식은?”</p>
                         </div>
                         <div class="hover-text">
-                            <h3>자세히 보기</h3>
-                            <p>더 많은 정보를 확인하세요</p>
+                            <h3>Meal Types</h3>
+                            <p>비건, 락토오보, 대체유제품</p>
                         </div>
                     </div>
                     <div class="menu-card card3">
                         <div class="menu_img">
-                            <img src="./images/our-menu/our-menu_003.png" alt="Treats & Slip">
+                            <img src="./images/our-menu/our-menu_004.png" alt="Treats & Slip">
                         </div>
                         <div class="menu-text">
                             <h3>Balanced Meals</h3>
                             <p>“가볍게, 든든하게.”</p>
                         </div>
                         <div class="hover-text">
-                            <h3>자세히 보기</h3>
-                            <p>더 많은 정보를 확인하세요</p>
+                            <h3>Balanced Meals</h3>
+                            <p>완전영양, 고단백, 저당, 에너지/제로, 고식이섬유</p>
                         </div>
                     </div>
                     <div class="menu-card card4">
                         <div class="menu_img">
-                            <img src="./images/our-menu/our-menu_004.png" alt="Treats & Slip">
+                            <img src="./images/our-menu/our-menu_003.png" alt="Treats & Slip">
                         </div>
                         <div class="menu-text">
                             <h3>Special Now</h3>
                             <p>“당신을 위한 특별한 헤택”</p>
                         </div>
                         <div class="hover-text">
-                            <h3>자세히 보기</h3>
-                            <p>더 많은 정보를 확인하세요</p>
+                            <h3>Special Now</h3>
+                            <p>베스트, 라이브, 특가혜택, 적립금</p>
                         </div>
                     </div>
                 </div>
@@ -538,32 +538,6 @@
                                     <span> #단백질</span><span> #단백질</span><span> #단백질</span>
                                 </div>
                                 <div class="best_product_price_icon">
-                                    <div class="best_product_price">
-                                        <span class="product-discount">38%</span><span>15,900원</span>
-                                    </div>
-                                    <div class="icon_wrap">
-                                        <button type="buttton" id="whishlist_btn"><img src="./images/whishlist.png" alt="관심상품 등록"></button>
-                                        <button type="buttton" id="cart_btn"><img src="./images/cart.png" alt="장바구니"></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide slide1">
-                        <div class="best_product_container">
-                            <div class="best_product_img">
-                            <a href="#">
-                                <img src="./images/sale_product_001.jpg" alt="고담백 르뱅 쿠키">
-                            </a>
-                            </div>
-                            <div class="best_product_info_wrap">
-                                <p class="best_product_name">
-                                    <a href="#">널담 고단백 르뱅 쿠키 12개입(6ea X 2box, 6종)</a>
-                                </p>
-                                <div class="best_product_tag">
-                                    <span> #단백질</span><span> #단백질</span><span> #단백질</span>
-                                </div>
-                                <div class="best_product_icon">
                                     <div class="best_product_price">
                                         <span class="product-discount">38%</span><span>15,900원</span>
                                     </div>
